Remove leftover guava collections