@@ -15,7 +15,6 @@
  */
 package com.hotels.styx.proxy.interceptors;
 
-import com.google.common.collect.ImmutableMap;
 import com.hotels.styx.api.Eventual;
 import com.hotels.styx.api.HttpInterceptor;
 import com.hotels.styx.api.LiveHttpRequest;
@@ -24,6 +23,8 @@ import com.hotels.styx.api.configuration.Configuration;
 import com.hotels.styx.api.configuration.ConfigurationContextResolver;
 import org.junit.jupiter.api.Test;
 import reactor.core.publisher.Mono;
+
+import java.util.Map;
 
 import static com.hotels.styx.api.HttpResponseStatus.OK;
 import static com.hotels.styx.api.LiveHttpRequest.get;
@@ -39,7 +40,7 @@ public class ConfigurationContextResolverInterceptorTest {
     @Test
     public void resolvesConfigurationContext() {
         LiveHttpRequest request = get("/").build();
-        Configuration.Context context = context(ImmutableMap.of("key1", "value1", "key2", "value2"));
+        Configuration.Context context = context(Map.of("key1", "value1", "key2", "value2"));
 
         ConfigurationContextResolver configurationContextResolver = configurationContextResolver(request, context);
 
@@ -60,7 +61,7 @@ public class ConfigurationContextResolverInterceptorTest {
         return configurationContextResolver;
     }
 
-    private Configuration.Context context(ImmutableMap<String, String> map) {
+    private Configuration.Context context(Map<String, String> map) {
         Configuration.Context context = mock(Configuration.Context.class);
         when(context.asMap()).thenReturn(map);
         return context;
